# x

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  renovate.json5  reuse-annotate.sh
.github/workflows/: ci.yml
atproto-comments/: .swcrc.license  README.md  atproto-comments.js  atproto-comments.jsx  comments.css
cargo-derive-doc/: Cargo.toml  README.md
cargo-derive-doc/examples/: error_set_test.rs  obvious_doesnt_doc.rs
cargo-derive-doc/src/: main.rs
cargo-derive-doc/tests/: direct_proc_macro.rs  macro_discovery.rs  macro_resolution.rs  ra_macro_expansion.rs
cargo-shipshape/: Cargo.toml  README.md  default.nix
cargo-shipshape/src/: crate_roots.rs  extract.rs  lib.rs  main.rs  sort.rs
cargo-shipshape/tests/: integration.rs
cargo-shipshape/tests/cli_tests/: mod.rs
cargo-shipshape/tests/extraction_tests/: mod.rs
cargo-shipshape/tests/fixtures/: all_item_types.expected  all_item_types.rs  already_sorted.rs  async_functions.expected  async_functions.rs  attributes.expected  attributes.rs  basic_sorting.expected  basic_sorting.rs  blank_line_preservation.expected  blank_line_preservation.rs  cfg_modules.expected  cfg_modules.rs  complex_impl.expected  complex_impl.rs  const_generics.expected  doc_comments.expected  doc_comments.rs  empty_file.expected  empty_file.rs  extern_block.expected  extern_block.rs  generics.expected  generics.rs  impl_adjacent_to_type.expected  impl_adjacent_to_type.rs  impl_grouping.expected  impl_grouping.rs  inner_attributes.expected  inner_attributes.rs  license_header.expected  license_header.rs  macro_call.expected  macro_call.rs  mixed_doc_comments.expected  mixed_doc_comments.rs  mod_types.expected  mod_types.rs  multiline_items.expected  multiline_items.rs  (+14 more)
flightstick-mapper/: Cargo.toml  config.toml
flightstick-mapper/src/: main.rs  profile.rs  rgb.rs
flightstick-mapper/src/rgb/: demo.rs
nyoomy-build-nix/: Cargo.toml  main.rs
pattern-wishcast/: Cargo.toml  README.md  bump-version.sh
pattern-wishcast/examples/: diy.rs  expression_evaluator.rs
pattern-wishcast/pattern-wishcast-impl/: Cargo.toml
pattern-wishcast/pattern-wishcast-impl/src/: codegen.rs  lib.rs
pattern-wishcast/pattern-wishcast-macros/: Cargo.toml
pattern-wishcast/pattern-wishcast-macros/src/: codegen.rs  field_checking.rs  lib.rs  patterns.rs
pattern-wishcast/src/: lib.rs  main.rs
pattern-wishcast/tests/: basic.rs  compile_tests.rs  custom_derives.rs  doc_comments.rs  enum_with_generics_success.rs  forward_references.rs  multiple_pattern_types.rs  offsets_dont_vary.rs  pattern_variants.rs  recursive_fields.rs  simple_enum_success.rs  strum.rs  union_composition_success.rs  union_syntax_success.rs  union_with_generics_success.rs  union_with_patterns.rs
pattern-wishcast/tests/ui/: empty_enum_body.rs  empty_enum_body.stderr  guard_patterns_unsupported.rs  guard_patterns_unsupported.stderr  missing_comma_between_variants.rs  missing_comma_between_variants.stderr  nested_patterns_unsupported.rs  nested_patterns_unsupported.stderr  no_conditional_variants.rs  no_conditional_variants.stderr  nonexistent_variant_in_pattern.rs  nonexistent_variant_in_pattern.stderr  nonexistent_variant_in_pattern.stderr.license  pattern_support_no_types.rs  pattern_support_no_types.stderr  pattern_type_without_support.rs  pattern_type_without_support.stderr  range_patterns_unsupported.rs  range_patterns_unsupported.stderr  single_pattern_type_no_conditional.rs  single_pattern_type_no_conditional.stderr  union_inside_brackets.rs  union_inside_brackets.stderr  unsupported_generic_field.rs  unsupported_generic_field.stderr  upcast_mut_unsound.rs  upcast_mut_unsound.stderr  upcast_mut_unsound.stderr.license
remarkable/: Cargo.toml  lib.rs  main.rs
rocm-inspect/: Cargo.toml  isa.rs  lib.rs  obj-ls.rs
scratch/: Cargo.toml
site/: Cargo.toml
site/src/: badges.rs  config.rs  context.rs  feed.rs  front_matter.rs  main.rs  pages.rs  render.rs  semantic_web.rs  transparent_dirs_tests.rs  url_rewriter.rs  utils.rs
site/tests/fixtures/transparent_dirs/: site.toml
site/tests/fixtures/transparent_dirs/content/: _index.md
site/tests/fixtures/transparent_dirs/content/articles/: _index.md
site/tests/fixtures/transparent_dirs/content/articles/_2023/: old-post.md
site/tests/fixtures/transparent_dirs/content/articles/_2024/: second-post.md
site/tests/fixtures/transparent_dirs/content/articles/_2024/first-post/: index.md
site/tests/fixtures/transparent_dirs/content/articles/regular/: normal-page.md
site/tests/fixtures/transparent_dirs/content/pages/: about.md
site/tests/fixtures/transparent_dirs/templates/templates/: page.html
