# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = [
	"cargo-derive-doc",
	"flightstick-mapper",
	"nyoomy-build-nix",
	"pattern-wishcast",
	"pattern-wishcast/pattern-wishcast-macros",
	"remarkable",
	"rocm-inspect",
	"site",
	"scratch",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"
edition = "2024"
