# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: MIT

[package]
name = "cargo-derive-doc"
description = "Automatically document macro expansions by adding inline comments showing added impls and items"
version = "0.0.1-pre.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
categories = ["development-tools::cargo-plugins"]

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits", "visit-mut"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
anyhow = "1.0"
argh = "0.1"
similar = "2.7"

[dev-dependencies]
error_set = "0.8.5"
