# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: MIT

[package]
name = "cargo-derive-doc"
description = "Automatically document macro expansions by adding inline comments showing added impls and items"
version = "0.0.1-pre.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
categories = ["development-tools::cargo-plugins"]

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits", "visit-mut"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
anyhow = "1.0"
argh = "0.1"
similar = "2.7"

[dev-dependencies]
error_set = "0.9"
ra_ap_base_db = "0.0.312"
ra_ap_hir = "0.0.312"
ra_ap_hir_def = "0.0.312"
ra_ap_hir_expand = "0.0.312"
ra_ap_ide_db = "0.0.312"
ra_ap_load-cargo = "0.0.312"
ra_ap_paths = "0.0.312"
ra_ap_proc_macro_api = "0.0.312"
ra_ap_project_model = "0.0.312"
ra_ap_span = "0.0.312"
ra_ap_syntax = "0.0.312"
ra_ap_syntax-bridge = "0.0.312"
ra_ap_tt = "0.0.312"
ra_ap_vfs = "0.0.312"
rustc-hash = "2.1"
semver = "1.0.27"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
