# SPDX-FileCopyrightText: 2026 LunNova
#
# SPDX-License-Identifier: MIT

[package]
name = "cargo-shipshape"
description = "Cargo subcommand to sort Rust file items by type and name"
version = "0.0.1-pre.1"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
categories = ["development-tools::cargo-plugins"]

[lib]
name = "cargo_shipshape"

[[bin]]
name = "cargo-shipshape"
path = "src/main.rs"

[dependencies]
ra_ap_syntax = "0.0.312"
argh = "0.1"
anyhow = "1.0"
similar = "2.7"
walkdir = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
diff = "0.1"
assert_cmd = "2"
