# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "flightstick-mapper"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
color-eyre = "0.6.3"
evdev-rs = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2.174"
rusb = "0.9"
colorsys = "0.7"

[profile.release]
lto = true
