# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: MIT

[package]
name = "pattern-wishcast"
description = "Pattern types emulation for conditional variants using conditional never types"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/LunNova/x"
license = "MIT"

[dependencies]
pattern-wishcast-impl = { path = "pattern-wishcast-impl", version = "0.0.1-alpha.0" }

[dev-dependencies]
trybuild = "1.0"
