# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: MIT

[package]
name = "pattern-wishcast"
description = "Pattern types emulation for conditional variants using conditional never types"
version = "0.0.1-alpha.2"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/LunNova/x"
license = "MIT"

[dependencies]
pattern-wishcast-macros = { path = "pattern-wishcast-macros", version = "0.0.1-alpha.0" }

[dev-dependencies]
trybuild = "1.0"

[package.metadata.workspaces]
independent = true
