[package]
name = "remarkable"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[[bin]]
name = "remarkable"
path = "main.rs"

[dependencies]
anyhow = "1.0"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v5"] }
nix = { version = "0.31.0", features = ["socket"] }
