# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "site"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
autometrics = { version = "2.0.0", features = ["opentelemetry-0_24"] }
blake3 = "1.5.4"
fastcdc = "3.1.0"
futures = "0.3.30"
gray_matter = "0.3.0"
serde_yaml = "0.9"
http-body-util = "0.1.2"
httpdate = "1.0.3"
hyper = { version = "1.4.1", features = ["full", "http1"] }
hyper-util = "0.1.7"
mime_guess = "2.0.5"
notify = "8.0"
num_cpus = "1.16.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
pulldown-cmark = "0.13.0"
syntect = "5.2"
two-face = { version = "0.4", features = ["syntect-default-onig"] }
pulldown-cmark-escape = "0.11"
itertools = "0.14"
html5ever = "0.35"
url = "2.5"
rand = "0.9.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["rc"] }
serde_json = "1.0.127"
sled = "0.34.7"
smallvec = "1.13.2"
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.39", features = ["serde"] }
argh = "0.1"
toml = "0.9"
markup5ever = "0.35"

[dev-dependencies]
tempfile = "3.12.0"
