# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: CC0-1.0
# SPDX-License-Identifier: MIT

[package]
name = "pattern-wishcast-macros"
description = "proc macro crate for pattern-wishcast"
version = "0.0.1-pre.5"
edition = "2024"
repository = "https://github.com/LunNova/x"
rust-version = "1.85"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

[package.metadata.workspaces]
independent = true
